# ai-llm

./: .gitignore  README.md  requirements.txt
deploy/: README.md  deploy.sh  (+3 more)
learn-langchain/chatbot/backend/: .gitignore  Pipfile  Readme.md  db.sqlite3  pyproject.toml
learn-langchain/chatbot/backend/chatbot/: bedrock_chatbot.py  core.py  urls.py  views.py
learn-langchain/chatbot/backend/mysite/: settings.py  urls.py
learn-langchain/chatbot/backend/polls/: core.py
mcp/fastmcp-base/: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
mcp/fastmcp-base/.claude/: settings.local.json
mcp/fastmcp-base/deploy/: .env.example  .env.prd  .env.stg  Dockerfile  README.md  deploy.sh  docker-compose.prd.yml  docker-compose.prod.yml  docker-compose.stg.yml  docker-compose.yml  loki-config.yml  nginx-http.conf.template  nginx.conf  nginx.conf.template  promtail-config.yml
mcp/fastmcp-base/examples/: __init__.py  client_demo.py  sql_query_demo.py
mcp/fastmcp-base/scripts/: README.md  create_tables.sql  init_database.py  schema.sql  setup_uv.bat  setup_uv.sh
mcp/fastmcp-base/src/: __init__.py  app.py  asgi.py  database_config.py  database_mcp_server.py  integrated_server.py  news_mcp_server.py  weather_mcp_server.py
mcp/fastmcp-base/src/auth/: setup.py
mcp/fastmcp-base/src/core/: auth.py  base.py  config.py  context.py  db.py  exceptions.py  http.py  logging.py  mcp.py  middleware.py
mcp/fastmcp-base/src/database/: models.py  orm.py  server.py  session.py
mcp/fastmcp-base/src/integrated/: server.py
mcp/fastmcp-base/src/news/: models.py  prompts.py  resources.py  server.py  tools.py
mcp/fastmcp-base/src/sample/auth/: tools.py
mcp/fastmcp-base/src/sample/basic/: models.py  prompts.py  resources.py  tools.py
mcp/fastmcp-base/src/sample/context/: tools.py
mcp/fastmcp-base/src/sample/database/: models.py  orm.py  tools.py
mcp/fastmcp-base/src/sample/external_api/: models.py  tools.py
mcp/fastmcp-base/src/users/: orm.py  prompts.py  resources.py  service.py  sql.py  tools.py
mcp/fastmcp-base/src/utils/: tools.py
mcp/fastmcp-base/src/weather/: models.py  prompts.py  resources.py  server.py  tools.py
mcp/fastmcp-base/tests/: __init__.py  conftest.py  simple_test.py  test_database.py  test_tools.py
mcp/fastmcp-base/tests/integration/: test_database.py
mcp/fastmcp-base/tests/unit/: test_news.py  test_utils.py  test_weather.py
orchestration-v2/orchestrator-server/: .env.example  CHANGES.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  schema.sql
orchestration-v2/orchestrator-server/evals/: evaluator.py  helpers.py  main.py
orchestration-v2/orchestrator-server/src/: main.py
orchestration-v2/orchestrator-server/src/agent/api/: agent_api.py
orchestration-v2/orchestrator-server/src/agent/schemas/: agent_schema.py
orchestration-v2/orchestrator-server/src/ai_overview/api/: document_api.py  search_api.py
orchestration-v2/orchestrator-server/src/ai_overview/models/: document_model.py  keyword_model.py
orchestration-v2/orchestrator-server/src/ai_overview/schemas/: document_schema.py
orchestration-v2/orchestrator-server/src/ai_overview/services/: document_service.py  search_service.py  upload_job.py
orchestration-v2/orchestrator-server/src/auth/api/: api_key_api.py  auth_api.py
orchestration-v2/orchestrator-server/src/auth/models/: api_key_model.py
orchestration-v2/orchestrator-server/src/auth/schemas/: api_key_schema.py  auth_schema.py
orchestration-v2/orchestrator-server/src/auth/services/: auth_service.py  keycloak_service.py
orchestration-v2/orchestrator-server/src/chatbot/api/: chatbot_api.py  custom_gpts.py
orchestration-v2/orchestrator-server/src/chatbot/models/: attachment_model.py  custom_gpt_model.py  gpt_message_model.py  gpt_session_model.py  message_model.py
orchestration-v2/orchestrator-server/src/chatbot/schemas/: admin_schema.py  chat_schema.py
orchestration-v2/orchestrator-server/src/chatbot/services/: attachment_repository.py  custom_gpt_service.py  session_repository.py  summary_service.py
orchestration-v2/orchestrator-server/src/common/: config.py  limiter.py  logging.py  metrics.py  middleware.py
orchestration-v2/orchestrator-server/src/common/api/: api.py
orchestration-v2/orchestrator-server/src/common/audit/: __init__.py  decorator.py  models.py  service.py
orchestration-v2/orchestrator-server/src/common/langgraph/: _memory.py  graph.py
orchestration-v2/orchestrator-server/src/common/schemas/: graph.py
orchestration-v2/orchestrator-server/src/common/services/: db_session.py  graph.py  llm.py  sanitization.py
orchestration-v2/orchestrator-server/src/llm_resources/api/: llm_resource_api.py
orchestration-v2/orchestrator-server/src/llm_resources/schemas/: llm_resource_schemas.py
orchestration-v2/orchestrator-server/src/rag/api/: rag_api.py
orchestration-v2/orchestrator-server/src/rag/models/: document_model.py
orchestration-v2/orchestrator-server/src/rag/schemas/: rag_schema.py
orchestration-v2/orchestrator-server/src/rag/services/: query_transformer.py  rag_group_service.py  rag_service.py
orchestration-v2/orchestrator-server/src/sample/: router.py
orchestration-v2/orchestrator-server/src/sample/_01_basic_chat_agent/: api.py
orchestration-v2/orchestrator-server/src/sample/_02_deep_thinking/: agent.py  nodes.py  state.py
orchestration-v2/orchestrator-server/src/sample/_03_llm_service/: api.py  circuit_breaker.py
orchestration-v2/orchestrator-server/src/sample/_04_rag_pipeline/: pipeline.py
orchestration-v2/orchestrator-server/src/sample/_05_fastapi_patterns/: streaming.py
orchestration-v2/orchestrator-server/src/sample/_06_workflow_engine/: engine.py
orchestration-v2/orchestrator-server/src/sample/_08_observability/: api.py
orchestration-v2/orchestrator-server/src/user/api/: user_api.py
orchestration-v2/orchestrator-server/src/user/models/: user_model.py
orchestration-v2/orchestrator-server/src/user/services/: user_repository.py
orchestration-v2/orchestrator-server/src/voice_evaluation/api/: voice_evaluation_api.py
(+2020 files in other folders)
