[project]
name = "fastmcp-base"
version = "0.2.0"
description = "FastMCP 베이스 프로젝트"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "fastmcp==3.3.1",
    "httpx",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyJWT>=2.8",
    "sqlalchemy[asyncio]>=2.0.43",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "starlette-prometheus>=0.10.0",
    "structlog>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
fastmcp-example = "main:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
