[project]
name = "langgraph-fastapi-template"
version = "0.1.0"
description = "LangGraph FastAPI Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langfuse==3.9.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.0",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "structlog>=25.2.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
    "bcrypt>=4.3.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=3.9.0",
    "langchain-community>=0.4.1",
    "langchain-litellm>=0.3.0",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "ddgs>=9.6.0",
    "tenacity>=9.1.2",
    "mem0ai>=1.0.0",
    "uvloop>=0.22.1;sys_platform!='win32'",
    "pgvector>=0.2.0",
    "azure-cognitiveservices-speech>=1.34.0",
    "azure-identity>=1.15.0",
    "openai>=1.12.0",
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
    "litellm>=1.56.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "ruff", "djlint==1.36.4"]

[dependency-groups]
test = ["httpx>=0.28.1", "pytest>=8.3.5"]
dev  = ["poethepoet>=0.29.0"]


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.black]
line-length = 119
exclude = "venv|migrations"

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
exclude = "venv|migrations"
max-line-length = 119

# radon
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119
skip = ["migrations", "venv"]

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.pylint.master]
ignore = "migrations"

[tool.ruff]
line-length = 119
exclude = ["migrations", "*.ipynb", "venv"]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules and docstring (`D`) rules
select = ["E", "F", "B", "ERA", "D"]
# Never enforce `E501` (line length violations).
ignore = ["E501", "F401", "D203", "D213", "B904", "B008"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

# ── Poe tasks (poethepoet) ────────────────────────────────────────────────────
# Usage: uv run poe <task>
# List all tasks: uv run poe --help

[tool.poe.tasks]
lint   = { cmd = "ruff check .",  help = "Run ruff linter" }
format = { cmd = "ruff format .", help = "Run ruff formatter" }
test   = { cmd = "pytest",        help = "Run pytest" }

# dev: APP_ENV is set via poe; the app loads .env.development via pydantic-settings
[tool.poe.tasks.dev]
cmd  = "uvicorn src.main:app --reload --port 8000"
env  = { APP_ENV = "development" }
help = "Start dev server with hot reload (port 8000)"

# staging/prod: use bash to source set_env.sh (Linux/macOS server only)
[tool.poe.tasks.staging]
shell       = "source scripts/set_env.sh staging && python -m uvicorn src.main:app --host 0.0.0.0 --port 8000 --loop uvloop"
interpreter = "bash"
help        = "Start server with staging config"

[tool.poe.tasks.prod]
shell       = "source scripts/set_env.sh production && python -m uvicorn src.main:app --host 0.0.0.0 --port 8000 --loop uvloop"
interpreter = "bash"
help        = "Start server with production config"

# eval: override env with  ENV=staging uv run poe eval
[tool.poe.tasks.eval]
shell       = "source scripts/set_env.sh ${ENV:-development} && python -m evals.main --interactive"
interpreter = "bash"
help        = "Interactive evaluation (ENV=staging to override)"

[tool.poe.tasks.eval-quick]
shell       = "source scripts/set_env.sh ${ENV:-development} && python -m evals.main --quick"
interpreter = "bash"
help        = "Quick evaluation with defaults"

[tool.poe.tasks.eval-no-report]
shell       = "source scripts/set_env.sh ${ENV:-development} && python -m evals.main --no-report"
interpreter = "bash"
help        = "Evaluation without report"

[tool.poe.tasks.clean]
shell       = "rm -rf .venv __pycache__ .pytest_cache .ruff_cache"
interpreter = "bash"
help        = "Remove .venv and caches"

[tool.poe.tasks.docker-run]
shell = """
ENV_FILE=.env.development
if [ ! -f "$ENV_FILE" ]; then
  echo "$ENV_FILE not found. Please create it."
  exit 1
fi
APP_ENV=development docker compose --env-file "$ENV_FILE" up -d --build db app
"""
interpreter = "bash"
help        = "Build and start db + app containers"

[tool.poe.tasks.docker-stop]
cmd  = "docker compose down"
env  = { APP_ENV = "development" }
help = "Stop containers"

[tool.poe.tasks.docker-logs]
cmd  = "docker compose logs -f app db"
env  = { APP_ENV = "development" }
help = "Follow app and db logs"
